--- a/fund02/typeOf.html
+++ b/fund02/typeOf.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Check Login</title>
+        <title>js Type Of</title>
         <meta charset="utf-8">
     </head>
     <body>
-        <script src = "./checkLogin.js"></script>
+        <script src = "./typeOf.js"></script>
     </body>
 </html>
