--- a/fund04/guestList.html
+++ b/fund04/guestList.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Check Login</title>
+        <title>Guest List Loop</title>
         <meta charset="utf-8">
     </head>
     <body>
-        <script src = "./checkLogin.js"></script>
+        <script src = "./guestList.js"></script>
     </body>
 </html>
